crates/data-dict/tests/snapshots/validate_spec__missing_version.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
tables: {}
────────────────────────────────────────
Error: [Q-1-10] YAML Validation Failed
   ╭─[ dict.yaml:1:1 ]
   │
 1 │ tables: {}
   │ ─────┬─────  
   │      ╰─────── Missing required property '$version' (must be one of: "0.1.0")
───╯
✖ At document root
ℹ Schema constraint: object
ℹ Add the `$version` property to your YAML document?
